--- a/exampleSite/content/results/cancer/mci_cancer_prelim.html
+++ b/exampleSite/content/results/cancer/mci_cancer_prelim.html
@@ -2110,6 +2110,13 @@ summary {
 </div>
 
 
+<style type="text/css">
+.main-container {
+  max-width: 1800px;
+  margin-left: auto;
+  margin-right: auto;
+}
+</style>
 <div id="introduction" class="section level1">
 <h1>Introduction</h1>
 <ul>
@@ -2135,8 +2142,8 @@ summary {
 <div class="title">
 <h3>Average covariates by group before SBW</h3>
 </div>
-<div id="htmlwidget-6fc1adcd945dd0502f5e" class="reactable html-widget" style="width:auto;height:auto;"></div>
-<script type="application/json" data-for="htmlwidget-6fc1adcd945dd0502f5e">{"x":{"tag":{"name":"Reactable","attribs":{"data":{".rownames":["69-71 years","72-75 years","76-79 years","80 years or older","Female","High school","Some college","College","Post-college"],"MCI + Cancer (All)":[0.23,0.16,0.23,0.22,0.69,0.25,0.23,0.15,0.16],"MCI + Cancer (Before Diag.)":[0.23,0.17,0.2,0.22,0.7,0.24,0.22,0.16,0.16],"MCI + Cancer (After Diag.)":[0.23,0.16,0.23,0.19,0.75,0.25,0.24,0.16,0.14],"MCI":[0.25,0.18,0.19,0.19,0.77,0.24,0.25,0.18,0.15]},"columns":[{"accessor":".rownames","name":"","type":"character","align":"center","sortable":false,"filterable":false},{"accessor":"MCI + Cancer (All)","name":"MCI + Cancer (All)","type":"numeric","align":"center"},{"accessor":"MCI + Cancer (Before Diag.)","name":"MCI + Cancer (Before Diag.)","type":"numeric","align":"center"},{"accessor":"MCI + Cancer (After Diag.)","name":"MCI + Cancer (After Diag.)","type":"numeric","align":"center"},{"accessor":"MCI","name":"MCI","type":"numeric","align":"center"}],"defaultPageSize":10,"paginationType":"numbers","showPageInfo":true,"minRows":1,"dataKey":"500816c71fba3a8cef294476a03727fb","key":"500816c71fba3a8cef294476a03727fb"},"children":[]},"class":"reactR_markup"},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-1a0989b4971865b2deb8" class="reactable html-widget" style="width:auto;height:auto;"></div>
+<script type="application/json" data-for="htmlwidget-1a0989b4971865b2deb8">{"x":{"tag":{"name":"Reactable","attribs":{"data":{".rownames":["69-71 years","72-75 years","76-79 years","80 years or older","Female","High school","Some college","College","Post-college"],"MCI + Cancer (All)":[0.23,0.16,0.23,0.22,0.69,0.25,0.23,0.15,0.16],"MCI + Cancer (Before Diag.)":[0.23,0.17,0.2,0.22,0.7,0.24,0.22,0.16,0.16],"MCI + Cancer (After Diag.)":[0.23,0.16,0.23,0.19,0.75,0.25,0.24,0.16,0.14],"MCI":[0.25,0.18,0.19,0.19,0.77,0.24,0.25,0.18,0.15]},"columns":[{"accessor":".rownames","name":"","type":"character","align":"center","sortable":false,"filterable":false},{"accessor":"MCI + Cancer (All)","name":"MCI + Cancer (All)","type":"numeric","align":"center"},{"accessor":"MCI + Cancer (Before Diag.)","name":"MCI + Cancer (Before Diag.)","type":"numeric","align":"center"},{"accessor":"MCI + Cancer (After Diag.)","name":"MCI + Cancer (After Diag.)","type":"numeric","align":"center"},{"accessor":"MCI","name":"MCI","type":"numeric","align":"center"}],"defaultPageSize":10,"paginationType":"numbers","showPageInfo":true,"minRows":1,"dataKey":"500816c71fba3a8cef294476a03727fb","key":"500816c71fba3a8cef294476a03727fb"},"children":[]},"class":"reactR_markup"},"evals":[],"jsHooks":[]}</script>
 <span style="color:#C8C8C8">TABLE: @maibennett</span>
 </div>
 <p><br> <br> - After re-weighting using SBW, <strong>groups are now balanced with respect to the MCI group</strong>:</p>
@@ -2145,8 +2152,8 @@ summary {
 <div class="title">
 <h3>Average covariates by group after SBW</h3>
 </div>
-<div id="htmlwidget-1af11c7cbfdf5434f285" class="reactable html-widget" style="width:auto;height:auto;"></div>
-<script type="application/json" data-for="htmlwidget-1af11c7cbfdf5434f285">{"x":{"tag":{"name":"Reactable","attribs":{"data":{".rownames":["69-71 years","72-75 years","76-79 years","80 years or older","Female","High school","Some college","College","Post-college"],"MCI + Cancer (All)":[0.25,0.18,0.19,0.19,0.77,0.24,0.25,0.17,0.15],"MCI + Cancer (Before Diag.)":[0.25,0.18,0.19,0.19,0.77,0.24,0.24,0.17,0.15],"MCI + Cancer (After Diag.)":[0.24,0.18,0.19,0.19,0.77,0.24,0.24,0.17,0.15],"MCI":[0.25,0.18,0.19,0.19,0.77,0.24,0.25,0.18,0.15]},"columns":[{"accessor":".rownames","name":"","type":"character","align":"center","sortable":false,"filterable":false},{"accessor":"MCI + Cancer (All)","name":"MCI + Cancer (All)","type":"numeric","align":"center"},{"accessor":"MCI + Cancer (Before Diag.)","name":"MCI + Cancer (Before Diag.)","type":"numeric","align":"center"},{"accessor":"MCI + Cancer (After Diag.)","name":"MCI + Cancer (After Diag.)","type":"numeric","align":"center"},{"accessor":"MCI","name":"MCI","type":"numeric","align":"center"}],"defaultPageSize":10,"paginationType":"numbers","showPageInfo":true,"minRows":1,"dataKey":"007694b9df4ecd0b054984a9a32b12d6","key":"007694b9df4ecd0b054984a9a32b12d6"},"children":[]},"class":"reactR_markup"},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-59e4f7a01d2f71d10df1" class="reactable html-widget" style="width:auto;height:auto;"></div>
+<script type="application/json" data-for="htmlwidget-59e4f7a01d2f71d10df1">{"x":{"tag":{"name":"Reactable","attribs":{"data":{".rownames":["69-71 years","72-75 years","76-79 years","80 years or older","Female","High school","Some college","College","Post-college"],"MCI + Cancer (All)":[0.25,0.18,0.19,0.19,0.77,0.24,0.25,0.17,0.15],"MCI + Cancer (Before Diag.)":[0.25,0.18,0.19,0.19,0.77,0.24,0.24,0.17,0.15],"MCI + Cancer (After Diag.)":[0.24,0.18,0.19,0.19,0.77,0.24,0.24,0.17,0.15],"MCI":[0.25,0.18,0.19,0.19,0.77,0.24,0.25,0.18,0.15]},"columns":[{"accessor":".rownames","name":"","type":"character","align":"center","sortable":false,"filterable":false},{"accessor":"MCI + Cancer (All)","name":"MCI + Cancer (All)","type":"numeric","align":"center"},{"accessor":"MCI + Cancer (Before Diag.)","name":"MCI + Cancer (Before Diag.)","type":"numeric","align":"center"},{"accessor":"MCI + Cancer (After Diag.)","name":"MCI + Cancer (After Diag.)","type":"numeric","align":"center"},{"accessor":"MCI","name":"MCI","type":"numeric","align":"center"}],"defaultPageSize":10,"paginationType":"numbers","showPageInfo":true,"minRows":1,"dataKey":"007694b9df4ecd0b054984a9a32b12d6","key":"007694b9df4ecd0b054984a9a32b12d6"},"children":[]},"class":"reactR_markup"},"evals":[],"jsHooks":[]}</script>
 <span style="color:#C8C8C8">TABLE: @maibennett</span>
 </div>
 </div>
@@ -2192,8 +2199,8 @@ a column separator --></p>
 <div class="title">
 <h3>Number of deaths to date by group</h3>
 </div>
-<div id="htmlwidget-1cd8fdd741adcb30b907" class="reactable html-widget" style="width:auto;height:auto;"></div>
-<script type="application/json" data-for="htmlwidget-1cd8fdd741adcb30b907">{"x":{"tag":{"name":"Reactable","attribs":{"data":{"Deaths":["No","Yes"],"MCI":["124","19"],"MCI + Cancer (Before)":["43","13"],"MCI + Cancer (After)":["16","9"]},"columns":[{"accessor":"Deaths","name":"Deaths","type":"character","align":"center"},{"accessor":"MCI","name":"MCI","type":"character","align":"center"},{"accessor":"MCI + Cancer (Before)","name":"MCI + Cancer (Before)","type":"character","align":"center"},{"accessor":"MCI + Cancer (After)","name":"MCI + Cancer (After)","type":"character","align":"center"}],"defaultPageSize":10,"paginationType":"numbers","showPageInfo":true,"minRows":1,"dataKey":"f01e11a1ab3afd8c1bc26c17b5aeb25d","key":"f01e11a1ab3afd8c1bc26c17b5aeb25d"},"children":[]},"class":"reactR_markup"},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-1fbfd374507d8decf409" class="reactable html-widget" style="width:auto;height:auto;"></div>
+<script type="application/json" data-for="htmlwidget-1fbfd374507d8decf409">{"x":{"tag":{"name":"Reactable","attribs":{"data":{"Deaths":["No","Yes"],"MCI":["124","19"],"MCI + Cancer (Before)":["43","13"],"MCI + Cancer (After)":["16","9"]},"columns":[{"accessor":"Deaths","name":"Deaths","type":"character","align":"center"},{"accessor":"MCI","name":"MCI","type":"character","align":"center"},{"accessor":"MCI + Cancer (Before)","name":"MCI + Cancer (Before)","type":"character","align":"center"},{"accessor":"MCI + Cancer (After)","name":"MCI + Cancer (After)","type":"character","align":"center"}],"defaultPageSize":10,"paginationType":"numbers","showPageInfo":true,"minRows":1,"dataKey":"f01e11a1ab3afd8c1bc26c17b5aeb25d","key":"f01e11a1ab3afd8c1bc26c17b5aeb25d"},"children":[]},"class":"reactR_markup"},"evals":[],"jsHooks":[]}</script>
 <span style="color:#C8C8C8">TABLE: @maibennett</span>
 </div>
 <p><br> <br> - While only <strong>13% of the control MCI group</strong> has died, over <strong>23% of the group with MCI + Cancer before</strong> the diagnosis passed away, and <strong>36%</strong> of the group who got a <strong>cancer diagnosis after</strong> MCI detection.</p>
